Updated the courses added flight delta lake project

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-file-text fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Summary</h2>
           <p>An avid programmer in data science and machine learning combined with a professional background of
-             7+ years in accounting.<br>
+            7+ years in accounting.<br>
             Experienced in Math, Statistics, SQL, Python, and its biggest libraries (Pandas, NumPy, Scikit-learn,
             PyTorch, TensorFlow, Keras, Matplotlib, Seaborn, …).<br>
             Strong Data cleaning and visualization skills, data analysis professional, with high knowledge in building
@@ -177,6 +177,21 @@
               class="material-icons fa-fw w3-margin-right w3-xxlarge w3-text-black">assessment</i>Projects</h2>
           <div class="w3-container">
             <div class="w3-half">
+              <h5 class="w3-opacity"><b>Building Delta Lake-house for flights in United states</b></h5>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2021 &nbsp;&nbsp;
+                <a href="https://github.com/ahmed-gharib89/flights-delta-lake" target="_blank">See
+                  project</a>
+              </h6>
+              <p>
+              <ul>
+                <li>Developed a script to simulate streaming data</li>
+                <li>Built automated pipeline to get the stream data and process it through each stage of the delta lake
+                </li>
+                <li>Completed end-to-end solution from gathering, cleaning, processing the data to consuming the data
+                  via PowerBI </li>
+                <p> The technology used: Python, PySpark, DeltaLake</p>
+              </ul>
+              </p>
               <h5 class="w3-opacity"><b>Dog Breed Classifier Application</b></h5>
               <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2020 &nbsp;&nbsp;
                 <a href="https://github.com/ahmed-gharib89/dog-classification" target="_blank">See
@@ -187,24 +202,24 @@
                 <li>Developed a Convolutional Neural Network using transfer learning with an
                   accuracy of 83%</li>
                 <li>Created an app that takes an image and checks if a dog in the image returns its breed.
-                    and if a human in the image returns the nearest dog breed.
+                  and if a human in the image returns the nearest dog breed.
                 </li>
                 <p>The technology used: Python and Pytorch.</p>
               </ul>
               </p>
-              <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
-              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020 &nbsp;&nbsp;
-                <a href="https://github.com/ahmed-gharib89/Plagiarism_Detection" target="_blank">See project</a>
-              </h6>
-              <p>
-              <ul>
-                <li>Created new features to measure the similarity between answer and source text like containment and
-                  longest common subsequence</li>
-                <li>Developed a binary classification neural network with an accuracy of 100% </li>
-                <p>The technology used: Python, Pytorch, AWS.</p>
-              </ul>
-              </p>
             </div>
+            <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020 &nbsp;&nbsp;
+              <a href="https://github.com/ahmed-gharib89/Plagiarism_Detection" target="_blank">See project</a>
+            </h6>
+            <p>
+            <ul>
+              <li>Created new features to measure the similarity between answer and source text like containment and
+                longest common subsequence</li>
+              <li>Developed a binary classification neural network with an accuracy of 100% </li>
+              <p>The technology used: Python, Pytorch, AWS.</p>
+            </ul>
+            </p>
             <div class="w3-half">
               <h5 class="w3-opacity"><b>We Rate Dogs Analysis</b></h5>
               <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020 &nbsp;&nbsp;
@@ -219,19 +234,6 @@
                 <p>The technology used: Python, SQL, Powerpoint</p>
               </ul>
               </p>
-              <h5 class="w3-opacity"><b>Sakila DVD Rental Analysis</b></h5>
-              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2020 &nbsp;&nbsp;
-                <a href="https://github.com/ahmed-gharib89/sakila-dvd-rental-database-analysis" target="_blank">See
-                  project</a>
-              </h6>
-              <p>
-              <ul>
-                <li>Setup the sakila database using pgAdmin</li>
-                <li> Queried the database and Exported csv reports</li>
-                <li> Created reports for the customer analysis using Excel</li>
-                <p> The technology used: Postgresql, Excel, Powerpoint</p>
-              </ul>
-              </p>
             </div>
           </div>
         </div>
@@ -243,7 +245,7 @@
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Online courses and programms</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-            <p>I have successfully completed more than 200 online courses at
+            <p>I have successfully completed more than 270 online courses at
               <a href="https://www.udacity.com/" target="_blank">Udacity</a>,
               <a href="https://www.coursera.org/" target="_blank">Coursera</a>,
               <a href="https://www.datacamp.com/" target="_blank">Datacamp</a>,
@@ -251,7 +253,7 @@
               <a href="https://www.linkedin.com/learning/?trk=nav_neptune_learning" target="_blank">Linkedin
                 Learning</a>, and
               <a href="https://www.udemy.com/" target="_blank">Udemy</a>
-              related to Data Science and Machine learning, <br> 
+              related to Data Science and Machine learning, <br>
               And currently studying
               <a href="https://learn.datacamp.com/career-tracks/machine-learning-scientist-with-python?version=1"
                 target="_blank">Machine Learning Scientist with Python at DataCamp</a>
@@ -262,31 +264,46 @@
           <div class="w3-container">
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
-            <div class="w3-half">  
+            <div class="w3-half">
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/WUQDQTG265TL"
+                target="_blank">
+                Practical Data Science - Coursera</a><br>
+              <a href="https://graduation-api.udacity.com/api/certificate/DUSDKNJE/download" target="_blank">
+                Data Engineering Nanodegree - Udacity</a><br>
+              <a href="https://www.credly.com/badges/c6328983-45bb-4eaa-a3fe-0ce740a23ed0?" target="_blank">
+                Google IT Automation with Python Certificate - Coursera</a><br>
+              <a href="https://credentials.databricks.com/4d71b6ba-d301-4e68-aeab-d29fa7f6a086" target="_blank">
+                Academy Accreditation - SQL Analyst Associate - Databricks</a><br>
+              <a href="https://credentials.databricks.com/a30d5815-848d-4384-938f-a97d6eebd84c" target="_blank">
+                Academy Accreditation - Delta Lake Essentials - Databricks</a><br>
+              <a href="https://credentials.databricks.com/98d2dac3-3be4-40f7-b5c2-dce4ad3ceb22" target="_blank">
+                Academy Accreditation - Unified Data Analytics - Databricks</a><br>
+              <a href="https://www.credly.com/badges/e2dc706f-c0b1-4c65-8436-27186337843b" target="_blank">
+                Microsoft Certified: Data Analyst Associate - Microsoft</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/ZCREQMK6/download" target="_blank">
                 Data Analysis and Visualization with Power BI - Udacity</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/0939af8d203093c470cd8551dfa22cf454610ba9"
-                target="_blank">Data Analyst with SQL Server Track - DataCamp</a><br>            
+                target="_blank">Data Analyst with SQL Server Track - DataCamp</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/K5FFHVYU/download" target="_blank">
                 Agile Software Developer Nanodegree - Udacity</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/WNY57CWJ/download" target="_blank">
                 Advanced Web Development Nanodegree - Udacity</a><br>
-              <a href="https://graduation-api.udacity.com/api/certificate/VCGRCAFZ/download" target="_blank">
-              Web Development Professional Nanodegree - Udacity</a><br>
-              <a href="https://graduation-api.udacity.com/api/certificate/3YKJDWHD/download" target="_blank">
-              AI Programming with Python Nanodegree - Udacity</a><br>
-              <a href="https://graduation-api.udacity.com/api/certificate/GSAQAGGJ/download" target="_blank">
-              Machine Learning Engineer Nanodegree - Udacity</a><br>
-              <a href="https://graduation-api.udacity.com/api/certificate/J7PRGLZQ/download" target="_blank">
-                Advanced Data Analysis Nanodegree - Udacity</a><br>
             </div>
             <div class="w3-half">
+              <a href="https://graduation-api.udacity.com/api/certificate/VCGRCAFZ/download" target="_blank">
+                Web Development Professional Nanodegree - Udacity</a><br>
+              <a href="https://graduation-api.udacity.com/api/certificate/3YKJDWHD/download" target="_blank">
+                AI Programming with Python Nanodegree - Udacity</a><br>
+              <a href="https://graduation-api.udacity.com/api/certificate/GSAQAGGJ/download" target="_blank">
+                Machine Learning Engineer Nanodegree - Udacity</a><br>
+              <a href="https://graduation-api.udacity.com/api/certificate/J7PRGLZQ/download" target="_blank">
+                Advanced Data Analysis Nanodegree - Udacity</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">
                 Data Analysis Professional Nanodegree - Udacity</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/HUZMETNC/download" target="_blank">
                 Programming for Data Science Nanodegree - Udacity</a><br>
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LEUNCGT2KXCV"
-                 target="_blank">Deep Learning Specialization - Coursera</a><br>
+                target="_blank">Deep Learning Specialization - Coursera</a><br>
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BRY439L2CQD7"
                 target="_blank">Mathematics for Machine Learning Specialization - Coursera</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/735a5253913e17fc3c0ad15d11d897a565172bd5"
@@ -321,8 +338,8 @@
               <li>
                 Creating and maintaining (Sales, Finance, and HR) Dashboards using Power BI.
               </li>
-              <li>Managed to automate the process of collecting budget, RE, and customers 
-                Target from the commercial team (Data provided in excel sheets) 
+              <li>Managed to automate the process of collecting budget, RE, and customers
+                Target from the commercial team (Data provided in excel sheets)
                 and split the target by Sales Office, Route, SKU, Day, Etc... using python and PostgreSQL.
               </li>
               <li>
