--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
               class="fa fa-file-text fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Summary</h2>
           <p>An avid programmer in data science and machine learning combined with a professional background of
             7+ years in accounting.<br>
-            Experienced in Math, Statistics, SQL, Python, and its biggest libraries (Pandas, NumPy, Scikit-learn,
-            PyTorch, TensorFlow, Keras, Matplotlib, Seaborn, …).<br>
+            Experienced in Math, Statistics, SQL, NoSQL, Python, and its biggest libraries (Pandas, NumPy, Scikit-learn,
+            PySpark, PyTorch, TensorFlow, Keras, Matplotlib, Seaborn, …).<br>
             Strong Data cleaning and visualization skills, data analysis professional, with high knowledge in building
             Machine Learning Models using Cloud Services on Azure and AWS.<br>
           </p>
