Added Atos to current job

--- a/index.html
+++ b/index.html
@@ -330,10 +330,21 @@
 
           <!-- Current Work -->
           <div class="w3-container">
+            <h5 class="w3-opacity"><b>Senior Bi Developer / Atos - Nasr City,
+                Cairo.</b></h5>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2021 - <span
+                class="w3-tag w3-opacity w3-round">Current</span></h6>
+            <ul>
+
+            </ul>
+            <hr>
+          </div>
+
+          <!-- 2nd Work -->
+          <div class="w3-container">
             <h5 class="w3-opacity"><b>Senior Bi Developer / Coca-Cola - Nasr City,
                 Cairo.</b></h5>
-            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2020 - <span
-                class="w3-tag w3-opacity w3-round">Current</span></h6>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2020 - May 2021</h6>
             <ul>
               <li>
                 Creating and maintaining (Sales, Finance, and HR) Dashboards using Power BI.
@@ -352,7 +363,7 @@
             <hr>
           </div>
 
-          <!-- 2nd Work -->
+          <!-- 3rd Work -->
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Data analyst / Al Safy Group - Fifth settlement, New
                 Cairo.</b></h5>
