Add 3 more certificates 1- Tensorflow 2 Developer Porfessional Certificate 2- Python Programmer Track 3- Data Engineer Track

--- a/index.html
+++ b/index.html
@@ -265,6 +265,13 @@
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
             <div class="w3-half">
+              <a href="https://www.datacamp.com/statement-of-accomplishment/track/7a1d3417ec7e5d12f72d4cdff8e8295d18df585a"
+                target="_blank">Data Engineer with Python Track - DataCamp</a><br>
+              <a href="https://www.datacamp.com/statement-of-accomplishment/track/d5902d769555242c9e47e0881ea2834931f33b20"
+                target="_blank">Python Programmer Track - DataCamp</a><br>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/WUBPEHKLA93U"
+                target="_blank">
+                TensorFlow Developer Professional Certificate- Coursera</a><br>
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/WUQDQTG265TL"
                 target="_blank">
                 Practical Data Science - Coursera</a><br>
@@ -284,11 +291,11 @@
                 Data Analysis and Visualization with Power BI - Udacity</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/0939af8d203093c470cd8551dfa22cf454610ba9"
                 target="_blank">Data Analyst with SQL Server Track - DataCamp</a><br>
-              <a href="https://graduation-api.udacity.com/api/certificate/K5FFHVYU/download" target="_blank">
-                Agile Software Developer Nanodegree - Udacity</a><br>
-              <a href="https://graduation-api.udacity.com/api/certificate/WNY57CWJ/download" target="_blank">
-                Advanced Web Development Nanodegree - Udacity</a><br>
             </div>
+            <a href="https://graduation-api.udacity.com/api/certificate/K5FFHVYU/download" target="_blank">
+              Agile Software Developer Nanodegree - Udacity</a><br>
+            <a href="https://graduation-api.udacity.com/api/certificate/WNY57CWJ/download" target="_blank">
+              Advanced Web Development Nanodegree - Udacity</a><br>
             <div class="w3-half">
               <a href="https://graduation-api.udacity.com/api/certificate/VCGRCAFZ/download" target="_blank">
                 Web Development Professional Nanodegree - Udacity</a><br>
@@ -310,8 +317,6 @@
                 target="_blank">Data Scientist with Python Track - DataCamp</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/d445c2b843e76eb06e95884e8863312cb4edce89"
                 target="_blank">Data Analyst with Python Track - DataCamp</a><br>
-              <a href="https://www.datacamp.com/statement-of-accomplishment/track/3357c731d727f6a7a6573ad7212f758138bdcb9f"
-                target="_blank">Python Programming Track - DataCamp</a><br>
             </div>
           </div>
           <hr>
