fix the layout of the page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <title>Ahmed Gharib</title>
 
@@ -177,62 +177,62 @@
               class="material-icons fa-fw w3-margin-right w3-xxlarge w3-text-black">assessment</i>Projects</h2>
           <div class="w3-container">
             <div class="w3-half">
-              <h5 class="w3-opacity"><b>Building Delta Lake-house for flights in United states</b></h5>
+              <h5 class="w3-opacity"><b>Building Delta Lake-house for flights in USA</b></h5>
               <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2021 &nbsp;&nbsp;
                 <a href="https://github.com/ahmed-gharib89/flights-delta-lake" target="_blank">See
                   project</a>
               </h6>
-              <p>
               <ul>
                 <li>Developed a script to simulate streaming data</li>
                 <li>Built automated pipeline to get the stream data and process it through each stage of the delta lake
                 </li>
                 <li>Completed end-to-end solution from gathering, cleaning, processing the data to consuming the data
                   via PowerBI </li>
-                <p> The technology used: Python, PySpark, DeltaLake</p>
               </ul>
+              <p>
+                The technology used: Python, PySpark, DeltaLake
               </p>
               <h5 class="w3-opacity"><b>Dog Breed Classifier Application</b></h5>
               <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2020 &nbsp;&nbsp;
                 <a href="https://github.com/ahmed-gharib89/dog-classification" target="_blank">See
                   project</a>
               </h6>
-              <p>
               <ul>
                 <li>Developed a Convolutional Neural Network using transfer learning with an
                   accuracy of 83%</li>
                 <li>Created an app that takes an image and checks if a dog in the image returns its breed.
                   and if a human in the image returns the nearest dog breed.
                 </li>
-                <p>The technology used: Python and Pytorch.</p>
               </ul>
+              <p>
+                The technology used: Python and Pytorch.
               </p>
             </div>
-            <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
-            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020 &nbsp;&nbsp;
-              <a href="https://github.com/ahmed-gharib89/Plagiarism_Detection" target="_blank">See project</a>
-            </h6>
-            <p>
-            <ul>
-              <li>Created new features to measure the similarity between answer and source text like containment and
-                longest common subsequence</li>
-              <li>Developed a binary classification neural network with an accuracy of 100% </li>
-              <p>The technology used: Python, Pytorch, AWS.</p>
-            </ul>
-            </p>
             <div class="w3-half">
+              <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020 &nbsp;&nbsp;
+                <a href="https://github.com/ahmed-gharib89/Plagiarism_Detection" target="_blank">See project</a>
+              </h6>
+              <ul>
+                <li>Created new features to measure the similarity between answer and source text like containment and
+                  longest common subsequence</li>
+                <li>Developed a binary classification neural network with an accuracy of 100% </li>
+              </ul>
+              <p>
+                The technology used: Python, Pytorch, AWS.
+              </p>
               <h5 class="w3-opacity"><b>We Rate Dogs Analysis</b></h5>
               <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020 &nbsp;&nbsp;
                 <a href="https://github.com/ahmed-gharib89/wrangle-and-analyze_data" target="_blank">See
                   project</a>
               </h6>
-              <p>
               <ul>
                 <li> Gathered the data from 3 sources (csv, downloaded a tsv file, and twitter API) </li>
                 <li> Cleaned and saved the combined data into SQL database </li>
                 <li> Created report for the analysis and visualization</li>
-                <p>The technology used: Python, SQL, Powerpoint</p>
               </ul>
+              <p>
+                The technology used: Python, SQL, Powerpoint
               </p>
             </div>
           </div>
@@ -443,7 +443,7 @@
     <span class="close">&times;</span>
 
     <!-- Modal Content (The Image) -->
-    <img class="modal-content" id="img01">
+    <!-- <img class="modal-content" id="img01"> -->
 
     <!-- Modal Caption (Image Text) -->
     <div id="caption"></div>
@@ -465,7 +465,7 @@
   </footer>
 
 </body>
-<script>
+<!-- <script>
   // Get the modal
   var modal = document.getElementById('myModal');
 
@@ -486,6 +486,6 @@
   span.onclick = function () {
     modal.style.display = "none";
   }
-</script>
+</script> -->
 
 </html>
