--- a/index.html
+++ b/index.html
@@ -265,6 +265,14 @@
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
             <div class="w3-half">
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/YAPTXUYL7CBD"
+                target="_blank">Building Cloud Computing Solutions at Scale - Courser</a><br>
+              <a href="https://www.credly.com/badges/09047a39-9207-4d95-9ec2-5f0f597ab89c?source=linked_in_profile"
+                target="_blank">Microsoft Azure Fundamentals AZ-900 - Microsoft</a><br>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/HCBZXBV5Z2N5"
+                target="_blank">Machine Learning: Algorithms in the Real World - Coursera</a><br>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/YF3LJATXFE2W"
+                target="_blank">Microsoft Azure Fundamentals AZ-900 Exam Prep - Coursera</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/7a1d3417ec7e5d12f72d4cdff8e8295d18df585a"
                 target="_blank">Data Engineer with Python Track - DataCamp</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/d5902d769555242c9e47e0881ea2834931f33b20"
@@ -287,11 +295,11 @@
                 Academy Accreditation - Unified Data Analytics - Databricks</a><br>
               <a href="https://www.credly.com/badges/e2dc706f-c0b1-4c65-8436-27186337843b" target="_blank">
                 Microsoft Certified: Data Analyst Associate - Microsoft</a><br>
-              <a href="https://graduation-api.udacity.com/api/certificate/ZCREQMK6/download" target="_blank">
-                Data Analysis and Visualization with Power BI - Udacity</a><br>
-              <a href="https://www.datacamp.com/statement-of-accomplishment/track/0939af8d203093c470cd8551dfa22cf454610ba9"
-                target="_blank">Data Analyst with SQL Server Track - DataCamp</a><br>
             </div>
+            <a href="https://graduation-api.udacity.com/api/certificate/ZCREQMK6/download" target="_blank">
+              Data Analysis and Visualization with Power BI - Udacity</a><br>
+            <a href="https://www.datacamp.com/statement-of-accomplishment/track/0939af8d203093c470cd8551dfa22cf454610ba9"
+              target="_blank">Data Analyst with SQL Server Track - DataCamp</a><br>
             <a href="https://graduation-api.udacity.com/api/certificate/K5FFHVYU/download" target="_blank">
               Agile Software Developer Nanodegree - Udacity</a><br>
             <a href="https://graduation-api.udacity.com/api/certificate/WNY57CWJ/download" target="_blank">
