Update projects section and add 4 new certificates Cloud DevOps Engineer Nanodegree - Udacity Architecting with Google Kubernetes Engine - Coursera AWS Fundamentals Specialization - Coursera Web Design for Everybody Specialization - Coursera 	modified:   .gitignore 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -174,9 +174,22 @@
 
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16"><i
-              class="material-icons fa-fw w3-margin-right w3-xxlarge w3-text-black">assessment</i>Projects</h2>
-          <div class="w3-container">
-            <div class="w3-half">
+            class="material-icons fa-fw w3-margin-right w3-xxlarge w3-text-black">assessment</i>Projects</h2>
+            <div class="w3-container">
+              <div class="w3-half">
+              <h5 class="w3-opacity"><b>Cloud DevOps Caostone Project</b></h5>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2021 &nbsp;&nbsp;
+                <a href="https://github.com/ahmed-gharib89/AWS-Cloud-DevOps-Engineer-Capstone-Project" target="_blank">See
+                  project</a>
+              </h6>
+              <ul>
+                <li> Deploying a simple web application (url shortener) to AWS EKS cluster. </li>
+                <li> Using Jenkins to build, test and deploy the application.</li>
+                <li> Using rolling update strategy to update the web app with 0 minute downtime. </li>
+              </ul>
+              <p>
+                The technology used: Python, EKS, Jenkins, AWS.
+              </p>
               <h5 class="w3-opacity"><b>Building Delta Lake-house for flights in USA</b></h5>
               <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2021 &nbsp;&nbsp;
                 <a href="https://github.com/ahmed-gharib89/flights-delta-lake" target="_blank">See
@@ -192,6 +205,8 @@
               <p>
                 The technology used: Python, PySpark, DeltaLake
               </p>
+            </div>
+            <div class="w3-half">
               <h5 class="w3-opacity"><b>Dog Breed Classifier Application</b></h5>
               <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2020 &nbsp;&nbsp;
                 <a href="https://github.com/ahmed-gharib89/dog-classification" target="_blank">See
@@ -207,8 +222,6 @@
               <p>
                 The technology used: Python and Pytorch.
               </p>
-            </div>
-            <div class="w3-half">
               <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
               <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020 &nbsp;&nbsp;
                 <a href="https://github.com/ahmed-gharib89/Plagiarism_Detection" target="_blank">See project</a>
@@ -221,19 +234,6 @@
               <p>
                 The technology used: Python, Pytorch, AWS.
               </p>
-              <h5 class="w3-opacity"><b>We Rate Dogs Analysis</b></h5>
-              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020 &nbsp;&nbsp;
-                <a href="https://github.com/ahmed-gharib89/wrangle-and-analyze_data" target="_blank">See
-                  project</a>
-              </h6>
-              <ul>
-                <li> Gathered the data from 3 sources (csv, downloaded a tsv file, and twitter API) </li>
-                <li> Cleaned and saved the combined data into SQL database </li>
-                <li> Created report for the analysis and visualization</li>
-              </ul>
-              <p>
-                The technology used: Python, SQL, Powerpoint
-              </p>
             </div>
           </div>
         </div>
@@ -245,8 +245,9 @@
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Online courses and programms</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-            <p>I have successfully completed more than 270 online courses at
+            <p>I have successfully completed more than 350 online courses at
               <a href="https://www.udacity.com/" target="_blank">Udacity</a>,
+              <a href="https://learn.acloud.guru/" target="_blank">A Cloud Guru</a>,
               <a href="https://www.coursera.org/" target="_blank">Coursera</a>,
               <a href="https://www.datacamp.com/" target="_blank">Datacamp</a>,
               <a href="https://www.pluralsight.com/" target="_blank">Pluralsight</a>,
@@ -265,8 +266,16 @@
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
             <div class="w3-half">
+              <a href="https://graduation.udacity.com/api/graduation/certificate/WFDAKNXY/download" target="_blank">
+                Cloud DevOps Engineer Nanodegree - Udacity</a><br>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/F6JE79KH4NJB"
+              target="_blank">Architecting with Google Kubernetes Engine - Coursera</a><br>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/RKP2JSLAKB7D"
+                target="_blank">AWS Fundamentals Specialization - Coursera</a><br>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/SKK9HLP8YAHY"
+                target="_blank">Web Design for Everybody Specialization - Coursera</a><br>
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/YAPTXUYL7CBD"
-                target="_blank">Building Cloud Computing Solutions at Scale - Courser</a><br>
+                target="_blank">Building Cloud Computing Solutions at Scale - Coursera</a><br>
               <a href="https://www.credly.com/badges/09047a39-9207-4d95-9ec2-5f0f597ab89c?source=linked_in_profile"
                 target="_blank">Microsoft Azure Fundamentals AZ-900 - Microsoft</a><br>
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/HCBZXBV5Z2N5"
@@ -291,11 +300,11 @@
                 Academy Accreditation - SQL Analyst Associate - Databricks</a><br>
               <a href="https://credentials.databricks.com/a30d5815-848d-4384-938f-a97d6eebd84c" target="_blank">
                 Academy Accreditation - Delta Lake Essentials - Databricks</a><br>
+              </div>
               <a href="https://credentials.databricks.com/98d2dac3-3be4-40f7-b5c2-dce4ad3ceb22" target="_blank">
                 Academy Accreditation - Unified Data Analytics - Databricks</a><br>
               <a href="https://www.credly.com/badges/e2dc706f-c0b1-4c65-8436-27186337843b" target="_blank">
                 Microsoft Certified: Data Analyst Associate - Microsoft</a><br>
-            </div>
             <a href="https://graduation-api.udacity.com/api/certificate/ZCREQMK6/download" target="_blank">
               Data Analysis and Visualization with Power BI - Udacity</a><br>
             <a href="https://www.datacamp.com/statement-of-accomplishment/track/0939af8d203093c470cd8551dfa22cf454610ba9"
