--- a/index.html
+++ b/index.html
@@ -56,46 +56,31 @@
             <div class="w3-container">
               <p>
                 <i
-                  class="
-                    fa fa-briefcase fa-fw
-                    w3-margin-right w3-large w3-text-black
-                  "
+                  class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"
                 ></i
                 >Data Analyst
               </p>
               <p>
                 <i
-                  class="
-                    fa fa-home fa-fw
-                    w3-margin-right w3-large w3-text-black
-                  "
+                  class="fa fa-home fa-fw w3-margin-right w3-large w3-text-black"
                 ></i
                 >Cairo, Egypt
               </p>
               <p>
                 <i
-                  class="
-                    fa fa-envelope fa-fw
-                    w3-margin-right w3-large w3-text-black
-                  "
+                  class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-black"
                 ></i
                 >a.gharib89@yahoo.com
               </p>
               <p>
                 <i
-                  class="
-                    fa fa-phone fa-fw
-                    w3-margin-right w3-large w3-text-black
-                  "
+                  class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-black"
                 ></i
                 >01096995535
               </p>
               <p>
                 <i
-                  class="
-                    fa fa-github fa-fw
-                    w3-margin-right w3-large w3-text-black
-                  "
+                  class="fa fa-github fa-fw w3-margin-right w3-large w3-text-black"
                 ></i
                 ><a href="https://github.com/ahmed-gharib89" target="_blank"
                   >Github profile</a
@@ -103,10 +88,7 @@
               </p>
               <p>
                 <i
-                  class="
-                    fa fa-linkedin fa-fw
-                    w3-margin-right w3-large w3-text-black
-                  "
+                  class="fa fa-linkedin fa-fw w3-margin-right w3-large w3-text-black"
                 ></i
                 ><a
                   href="https://www.linkedin.com/in/ahmed-abdel-moniem-gharib/"
@@ -195,10 +177,7 @@
               <hr />
               <p class="w3-large">
                 <i
-                  class="
-                    fa fa-line-chart
-                    w3-margin-right w3-text-black w3-margin-top
-                  "
+                  class="fa fa-line-chart w3-margin-right w3-text-black w3-margin-top"
                 ></i
                 >Data Analysis
               </p>
@@ -251,10 +230,7 @@
 
               <p class="w3-large">
                 <i
-                  class="
-                    fa fa-refresh
-                    w3-margin-right w3-text-black w3-margin-top
-                  "
+                  class="fa fa-refresh w3-margin-right w3-text-black w3-margin-top"
                 ></i
                 >Proficency
               </p>
@@ -323,33 +299,26 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i
-                class="
-                  fa fa-file-text fa-fw
-                  w3-margin-right w3-xxlarge w3-text-black
-                "
+                class="fa fa-file-text fa-fw w3-margin-right w3-xxlarge w3-text-black"
               ></i
               >Summary
             </h2>
             <p>
-              An avid programmer in data science and machine learning combined
-              with a professional background of 7+ years in accounting.<br />
-              Experienced in Math, Statistics, SQL, NoSQL, Python, and its
-              biggest libraries (Pandas, NumPy, Scikit-learn, PySpark, PyTorch,
-              TensorFlow, Keras, Matplotlib, Seaborn, …).<br />
-              Strong Data cleaning and visualization skills, data analysis
-              professional, with high knowledge in building Machine Learning
-              Models using Cloud Services on Azure and AWS.<br />
+              Lifelong learner started my career as an accountant and gained the
+              business experience in retail, F&B and manufacturing then started
+              following my passion with data by automating reports and designing
+              dashboards with Excel and Power BI and it didn`t stop here and dig
+              deeper into Data Science and Machine Learning using both on-prem
+              and cloud solutions and enriched my knowledge in different areas
+              like DevOps, Distributed Systems, Linux, Kubernetes and
+              Microservices.
             </p>
           </div>
 
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
               <i
-                class="
-                  material-icons
-                  fa-fw
-                  w3-margin-right w3-xxlarge w3-text-black
-                "
+                class="material-icons fa-fw w3-margin-right w3-xxlarge w3-text-black"
                 >assessment</i
               >Projects
             </h2>
@@ -459,10 +428,7 @@
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
               <i
-                class="
-                  fa fa-certificate fa-fw
-                  w3-margin-right w3-xxlarge w3-text-black
-                "
+                class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-black"
               ></i
               >Education
             </h2>
@@ -507,6 +473,25 @@
                 <span class="w3-tag w3-opacity w3-round">Current</span>
               </h6>
               <div class="w3-half">
+                <a
+                  href="https://graduation.udacity.com/api/graduation/certificate/TYPXPKAD/download"
+                  target="_blank"
+                >
+                  Data Streaming Nanodegree - Udacity</a
+                ><br />
+                <a
+                  href="https://verify.acloud.guru/20F285D2422D"
+                  target="_blank"
+                >
+                  Linux Academy Elastic Certification Preparation - A Cloud
+                  Guru</a
+                ><br />
+                <a
+                  href="https://graduation.udacity.com/api/graduation/certificate/ZYPFCA3J/download"
+                  target="_blank"
+                >
+                  Intermediate Python Nanodegree - Udacity</a
+                ><br />
                 <a
                   href="https://graduation.udacity.com/api/graduation/certificate/WFDAKNXY/download"
                   target="_blank"
@@ -588,13 +573,13 @@
                 >
                   Academy Accreditation - SQL Analyst Associate - Databricks</a
                 ><br />
-                <a
-                  href="https://credentials.databricks.com/a30d5815-848d-4384-938f-a97d6eebd84c"
-                  target="_blank"
-                >
-                  Academy Accreditation - Delta Lake Essentials - Databricks</a
-                ><br />
               </div>
+              <a
+                href="https://credentials.databricks.com/a30d5815-848d-4384-938f-a97d6eebd84c"
+                target="_blank"
+              >
+                Academy Accreditation - Delta Lake Essentials - Databricks</a
+              ><br />
               <a
                 href="https://credentials.databricks.com/98d2dac3-3be4-40f7-b5c2-dce4ad3ceb22"
                 target="_blank"
@@ -704,10 +689,7 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i
-                class="
-                  fa fa-suitcase fa-fw
-                  w3-margin-right w3-xxlarge w3-text-black
-                "
+                class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-black"
               ></i
               >Work Experience
             </h2>
