Add Atos work experience

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <i
                   class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"
                 ></i
-                >Data Analyst
+                >BI Developer
               </p>
               <p>
                 <i
@@ -223,7 +223,7 @@
                   class="w3-container w3-center w3-round-xlarge w3-black"
                   style="width: 50%"
                 >
-                  50%
+                  40%
                 </div>
               </div>
               <hr />
@@ -703,7 +703,25 @@
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2021 -
                 <span class="w3-tag w3-opacity w3-round">Current</span>
               </h6>
-              <ul></ul>
+              <ul>
+                <li>
+                  Responsible for the reporting and analysis in Microsoft
+                  Practice Team.
+                </li>
+                <li>
+                  Participate in the pre-sales activities as a technical lead
+                  for Enterprise BI and Data platforms projects.
+                </li>
+                <li>
+                  Implementing MongoDB as IaaS on microsoft Azure for different
+                  inveronments.
+                </li>
+                <li>Implementing ECK (Elastic Stack on Kubernetes) on AKS.</li>
+                <li>
+                  Adding the authentication mechanism for python API wrapper
+                  with Microsft Azure.
+                </li>
+              </ul>
               <hr />
             </div>
 
