--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   <div class="w3-center w3-text-white">80%</div>
                 </div>
               </div>
-              <p>Machine learnin (Scikit-learn, SciPy)</p>
+              <p>Machine learning (Scikit-learn, SciPy)</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
                   class="w3-container w3-center w3-round-xlarge w3-black"
@@ -138,7 +138,7 @@
                   <div class="w3-center w3-text-white">60%</div>
                 </div>
               </div>
-              <p>Deep learnin (Pytorch, TensorFlow, Keras)</p>
+              <p>Deep learning (Pytorch, TensorFlow, Keras)</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
                   class="w3-container w3-center w3-round-xlarge w3-black"
